--- a/map-filter-reduce function/index.html
+++ b/map-filter-reduce function/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Map-Filter-Reduce</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Map, Filter, Reduce</h1>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
