--- a/hoisting in js/index.html
+++ b/hoisting in js/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hoisting in javascript</h1>
     <script src="script.js"></script>
 </body>
 </html>
