--- a/Interview-Question/code/code-3/index.html
+++ b/Interview-Question/code/code-3/index.html
@@ -7,7 +7,17 @@
 </head>
 <body>
     <script>
-        
+        greet("anu");
+
+        var greet = (name) => {
+            console.log("Good Day", name);
+        }
+
+        function greet(name){
+            console.log("Hello", name);
+        }
+
+        greet("anu")
     </script>
 </body>
 </html>
