--- a/Interview-Question/code/code-5/index.html
+++ b/Interview-Question/code/code-5/index.html
@@ -7,9 +7,14 @@
 </head>
 <body>
     <script>
-        console.log(1 !== true)
-        console.log(1 != true)
-        console.log(NaN !== NaN)
+        // console.log(1 !== true)
+        // console.log(1 != true)
+        // console.log(NaN !== NaN)
+        if([]){
+            console.log("Hello html")
+        } else{
+            console.log("Hello Javascript")
+        }
     </script>
 </body>
 </html>
