--- a/Interview-Question/code/code-5/index.html
+++ b/Interview-Question/code/code-5/index.html
@@ -10,11 +10,14 @@
         // console.log(1 !== true)
         // console.log(1 != true)
         // console.log(NaN !== NaN)
-        if([]){
-            console.log("Hello html")
-        } else{
-            console.log("Hello Javascript")
-        }
+        // if([]){
+        //     console.log("Hello html")
+        // } else{
+        //     console.log("Hello Javascript")
+        // }
+        const x = "hello Javascript"
+        let y = x
+        console.log(y)
     </script>
 </body>
 </html>
