--- a/Interview-Question/code/code-6/index.html
+++ b/Interview-Question/code/code-6/index.html
@@ -8,11 +8,12 @@
 <body>
     <script>
         const input = [5, 7, 9, 11, 15, 17]
+        n = 2;
         const output = 13
 
         for(let i=0; i<input.length; i++){
             let current = input[i];
-            let next = current + 2;
+            let next = current + n;
             // if(input[i + 1] === next) continue;
             // else{
             //     console.log(next);
