--- a/Interview-Question/code/code-7/index.html
+++ b/Interview-Question/code/code-7/index.html
@@ -9,7 +9,7 @@
     <button id="btn">resolve</button>
     <button id="btn1">reject</button>
 
-    <script src="script.js">
+    <script src="script.js" type="module">
     </script>
 </body>
 </html>
