task: deletefunctionality--added

--- a/JSCHALLENGES/ch-8/index.html
+++ b/JSCHALLENGES/ch-8/index.html
@@ -14,6 +14,9 @@
             <button id="increase" onclick="increaseCounter()">
                 Increase
             </button>
+            <button id="decrease" onclick="decreaseCounter()">
+                Decrease
+            </button>
             <!-- Create a refresh button -->
             <button id="refresh" onclick="refreshCounter()">Refresh</button>
         </div>
