task: added reset button

--- a/JSCHALLENGES/ch-8/index.html
+++ b/JSCHALLENGES/ch-8/index.html
@@ -18,7 +18,7 @@
                 Decrease
             </button>
             <!-- Create a refresh button -->
-            <button id="refresh" onclick="refreshCounter()">Refresh</button>
+            <button id="reset" onclick="resetCounter()">Reset</button>
         </div>
     </div>
     <script src="script.js"></script>
