--- a/Javascript-tutorial/00_basics/index.html
+++ b/Javascript-tutorial/00_basics/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <!-- <script src="01.js"></script> -->
-    <script src="02.js"></script>
-
+    <!-- <script src="02.js"></script> -->
+    <!-- <script src="03.js"></script> -->
+    <!-- <script src="04.js"></script> -->
+    <!-- <script src="05.js"></script> -->
+    <script src="06.js"></script>
 </body>
 </html>
