--- a/Javascript-tutorial/00_basics/index.html
+++ b/Javascript-tutorial/00_basics/index.html
@@ -11,6 +11,12 @@
     <!-- <script src="03.js"></script> -->
     <!-- <script src="04.js"></script> -->
     <!-- <script src="05.js"></script> -->
-    <script src="06.js"></script>
+    <!-- <script src="06.js"></script> -->
+    <!-- <script src="07.js"></script> -->
+    <!-- <script src="08.js"></script> -->
+    <!-- <script src="09.js"></script> -->
+    <!-- <script src="10.js"></script> -->
+    <script src="11.js"></script>
+
 </body>
 </html>
