--- a/Javascript-tutorial/00_basics/index.html
+++ b/Javascript-tutorial/00_basics/index.html
@@ -17,7 +17,8 @@
     <!-- <script src="09.js"></script> -->
     <!-- <script src="10.js"></script> -->
     <!-- <script src="11.js"></script> -->
-    <script src="12.js"></script>
+    <!-- <script src="12.js"></script> -->
+    <script src="13.js"></script>
 
 </body>
 </html>
