--- a/Javascript-tutorial/03_advancedjs/index.html
+++ b/Javascript-tutorial/03_advancedjs/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <script src="01.js" defer></script> -->
+    <!-- <script src="02.js" defer></script> -->
+    <!-- <script src="03.js" defer></script> -->
+    <script src="04.js" defer></script>
+    <!-- <script src="05.js" defer></script> -->
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="01.js"></script> -->
-    <!-- <script src="02.js"></script> -->
-    <script src="03.js"></script>
-    <!-- <script src="04.js"></script> -->
-    <!-- <script src="05.js"></script> -->
+    <h1 class="heading1">Hello World!!</h1>
+    <h1 class="heading2">Hello World!!</h1>
+    <h1 class="heading3">Hello World!!</h1>
+    <h1 class="heading4">Hello World!!</h1>
+    <h1 class="heading5">Hello World!!</h1>
+    <h1 class="heading6">Hello World!!</h1>
+    <h1 class="heading7">Hello World!!</h1>
 </body>
 </html>
