--- a/Javascript-tutorial/03_advancedjs/index.html
+++ b/Javascript-tutorial/03_advancedjs/index.html
@@ -7,7 +7,12 @@
     <!-- <script src="02.js" defer></script> -->
     <!-- <script src="03.js" defer></script> -->
     <!-- <script src="04.js" defer></script> -->
-    <script src="05.js" defer></script>
+    <!-- <script src="05.js" defer></script> -->
+    <!-- <script src="06.js" defer></script> -->
+    <script src="07.js" defer></script>
+    <!-- <script src="08.js" defer></script> -->
+    <!-- <script src="09.js" defer></script> -->
+    <!-- <script src="10.js" defer></script> -->
     <title>Document</title>
 </head>
 <body>
