--- a/Javascript-tutorial/03_advancedjs/index.html
+++ b/Javascript-tutorial/03_advancedjs/index.html
@@ -9,19 +9,19 @@
     <!-- <script src="04.js" defer></script> -->
     <!-- <script src="05.js" defer></script> -->
     <!-- <script src="06.js" defer></script> -->
-    <script src="07.js" defer></script>
+    <!-- <script src="07.js" defer></script> -->
     <!-- <script src="08.js" defer></script> -->
-    <!-- <script src="09.js" defer></script> -->
+    <script src="09.js" defer></script>
     <!-- <script src="10.js" defer></script> -->
-    <title>Document</title>
+    <title>Example</title>
 </head>
 <body>
-    <h1 class="heading1">Hello World!!</h1>
-    <!-- <h1 class="heading2">Hello World!!</h1>
-    <h1 class="heading3">Hello World!!</h1>
-    <h1 class="heading4">Hello World!!</h1>
-    <h1 class="heading5">Hello World!!</h1>
-    <h1 class="heading6">Hello World!!</h1>
-    <h1 class="heading7">Hello World!!</h1> -->
+    <h1 class="heading1">Hello World 1</h1>
+    <h1 class="heading2">Hello World 2</h1>
+    <h1 class="heading3">Hello World 3</h1>
+    <h1 class="heading4">Hello World 4</h1>
+    <h1 class="heading5">Hello World 5</h1>
+    <h1 class="heading6">Hello World 6</h1>
+    <h1 class="heading7">Hello World 7</h1>
 </body>
 </html>
