--- a/Javascript-tutorial/04_Advanced/index.html
+++ b/Javascript-tutorial/04_Advanced/index.html
@@ -6,7 +6,9 @@
     <!-- <script src="ajax.js" defer></script> -->
     <!-- <script src="errorhandling.js" defer></script> -->
     <!-- <script src="ajaxusingpromises.js" defer></script> -->
-    <script src="fetch.js" defer></script>
+    <!-- <script src="fetch.js" defer></script> -->
+    <script src="async-await.js" defer></script>
+
     <title>Document</title>
 </head>
 <body>
