--- a/001_JS_CHALLENGES/index.html
+++ b/001_JS_CHALLENGES/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src="longestWord.js" defer></script> -->
-    <script src="mathSequences.js" defer></script>
+    <!-- <script src="mathSequences.js" defer></script> -->
+    <script src="longestWords.js" defer></script>
     <title>Javascript Challenges</title>
 </head>
 <body>
