--- a/JSCHALLENGES/ch-11/index.html
+++ b/JSCHALLENGES/ch-11/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src="01.js" defer></script> -->
     <!-- <script src="02.js" defer></script> -->
-    <script src="03.js" defer></script>
+    <!-- <script src="03.js" defer></script> -->
+    <!-- <script src="04.js" defer></script> -->
+    <!-- <script src="05.js" defer></script> -->
+    <!-- <script src="06.js" defer></script> -->
+    <script src="07.js" defer></script>
+
 
     <title>Document</title>
 </head>
